Last commit of the day

--- a/Agus/Customer_Segmentation_Outlier_Detection.ipynb
+++ b/Agus/Customer_Segmentation_Outlier_Detection.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b430cb65-501b-4414-bc36-13333b3c2556",
+   "metadata": {},
+   "source": [
+    "# ML Challenge - Customer Segmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15e15183-cd0c-43aa-b94f-e44c0e4d6224",
+   "metadata": {},
+   "source": [
+    "This challenge will analyse a dataset of 8500 customers showing 18 features related to their credit card transactions. THe goal is to find a meaningful customer segmentation to define a different strategy for each."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ea91735-c6c1-4d3d-8d55-df82635bd9ac",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 249,
    "id": "35797962-1216-40cd-888f-e50d273d3e95",
@@ -27,6 +54,17 @@
     "\n",
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (12,10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "595a8af1-f599-4165-816d-ba935ab03f91",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Data reading and cleaning"
    ]
   },
   {
@@ -230,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 292,
    "id": "01e0663d-d1f2-411a-9b56-f35c1ca76d71",
    "metadata": {},
    "outputs": [
@@ -270,8 +308,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27d3e5d6-d729-4829-b5af-3622302bd306",
+   "metadata": {},
+   "source": [
+    "Since there are a total of 298 NaN on the feature 'min_payments', the KNN Imputer is used to fill this values with 5 neighbors"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 295,
    "id": "79a4d963-19cf-4e13-ab0c-bd356159fabe",
    "metadata": {},
    "outputs": [
@@ -610,12 +656,13 @@
        "[8500 rows x 17 columns]"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Impute missing NaN\n",
     "imputer = KNNImputer(n_neighbors=5)\n",
     "\n",
     "X_imputed= pd.DataFrame(imputer.fit_transform(data))\n",
@@ -626,9 +673,23 @@
   {
    "cell_type": "markdown",
    "id": "0ffb6a5a-ed75-42e4-880b-de3c73ffd309",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "# Outlier"
+    "## Outlier detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93d2bbad-980a-44ac-ac96-9d7e0c49b596",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Outlier Detection with Isolation Forest"
    ]
   },
   {
@@ -641,16 +702,6 @@
     "# Define percentage of outliers to be detected\n",
     "n = 0.03\n",
     "X_outlier = X_imputed_renamed.values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "93d2bbad-980a-44ac-ac96-9d7e0c49b596",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Outlier Detection with Isolation Forest"
    ]
   },
   {
@@ -692,10 +743,11 @@
    "cell_type": "markdown",
    "id": "8ceb2c30-d7bf-42ab-a688-1977ea7168d0",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "## Outlier Detection with CBLOF"
+    "### Outlier Detection with CBLOF"
    ]
   },
   {
@@ -711,8 +763,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14691dba-6cee-48ff-91e5-f12951b0512b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Merging Outlier Label to df"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 287,
    "id": "74c2479d-412d-4951-bcd3-998236ef52bb",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1151,7 @@
        "[8500 rows x 19 columns]"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,29 +1160,8 @@
     "outliers_df = X_imputed_renamed.copy(deep=True)\n",
     "outliers_df['Outlier_CBLOF'] = outlier_predictions_CBLOF\n",
     "outliers_df['Outlier_IF'] = pd.DataFrame(outlier_predictions_IF).replace([1, -1], [0, 1])\n",
-    "outliers_df.to_csv('../data/transactions_with_outliers.csv')\n",
+    "outliers_df.to_csv('../data/transactions_with_outliers.csv', index=False)\n",
     "outliers_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 284,
-   "id": "aca1f6cc-a04c-4167-9778-c06a95f30331",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/agustin/DS/Apps/Credit-Card-Segmentation/Agus'"
-      ]
-     },
-     "execution_count": 284,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
    ]
   },
   {
@@ -2344,8 +2386,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 290,
    "id": "c5996fc4-1e2d-4fb0-adc9-9ebeb6bdd69c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = ['purchase_amount', 'credit_limit', 'payments', 'purchase_amount', 'balance_account', 'installments', 'purchases_frequency', 'paid_advance', 'balance_frequency_update', 'nr_purchases', 'fixed_rate_period', 'full_payments_prc'] # 'full_purchases',\n",
+    "len(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2cc2d4f-788f-49d2-91cf-11a32da90ac3",
    "metadata": {},
    "outputs": [],
    "source": []
